# llm-abliteration

./: README.md  pyproject.toml  requirements.txt  setup.sh
abliteration/: __init__.py  core.py  dequant.py  moe_core.py  quantize.py
abliteration/.ipynb_checkpoints/: __init__-checkpoint.py
data/prompts/: domain_prompts_large.csv  domain_prompts_medium.csv  domain_prompts_small.csv  test_prompts.csv
notebooks/: abliteration_research.ipynb
notebooks/.ipynb_checkpoints/: abliteration_research-checkpoint.ipynb
scripts/: convert_to_gguf.py  dequantize_model.py  import_to_ollama.py  run_abliteration.py  run_abliteration_moe.py
