[project]
name = "llm-abliteration"
version = "0.1.0"
description = "LLM abliteration research for cybersecurity applications"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "CrackenAGI Research Team" }
]

dependencies = [
    # Core ML frameworks (latest stable)
    "torch>=2.8.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.8.0",
    # HuggingFace ecosystem (latest stable)
    "transformers>=4.57.0",
    "accelerate>=1.3.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.0",
    "safetensors>=0.5.0",
    # TransformerLens for mechanistic interpretability (latest)
    # Note: May not support all models, fallback to pure HF Transformers if needed
    "transformer-lens>=2.14.0",
    # Apple Silicon optimization (latest)
    "mlx>=0.23.0",
    "mlx-lm>=0.23.0",
    # Data science essentials (latest stable)
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    # Interactive visualizations
    "plotly[kaleido]>=5.24.0", # For static image export
    # Machine learning utilities
    "scikit-learn>=1.5.0", # For PCA, t-SNE, clustering metrics
    "scipy>=1.14.0", # For statistical tests
    # Utilities (latest stable)
    "einops>=0.8.0",
    "tqdm>=4.67.0",
    "datasets>=3.2.0",
    "jaxtyping>=0.2.0",
    # Jupyter for interactive analysis
    "jupyter>=1.1.0",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.0",
    "kaleido==0.2.1",
    "tiktoken>=0.12.0",
    "compressed-tensors>=0.12.2",
    "llmcompressor",
]

# Note: flash-attn is optional and requires CUDA GPU
# It's needed for some MoE models (e.g., Phi-tiny-MoE) but not all
# Install separately if needed: pip install flash-attn --no-build-isolation
# Most models will fall back to standard attention if flash-attn is not available

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []  # No modules to build, dependencies only

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
